--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# REACT_APP_API_URL="https://projetosaas-y6vmba4x.b4a.run"
-REACT_APP_API_URL="http://localhost:3333"
+REACT_APP_API_URL="https://projetosaas-y6vmba4x.b4a.run"
+# REACT_APP_API_URL="http://localhost:3333"
